Change the knitting default of Rmarkdown, add the final pdf and delete the html file.

--- a/data_exploration.Rmd
+++ b/data_exploration.Rmd
@@ -1,7 +1,8 @@
 ---
 title: "DataExploration"
 author: "WingYan Lee"
-output: html_document
+output:
+  pdf_document: default
 ---
 
 ```{r setup, message = FALSE, echo=FALSE}
